# zm-aidect

./: .gitignore  Cargo.toml  README.md  build.sh  containerbuild.sh  convert.sh  nativecontainerbuild.sh  release.sh  zm-aidect@.service
src/: instrumentation.rs  main.rs  ml.rs  vio.rs  zoneminder.rs
src/zoneminder/: db.rs  shm.rs  zmtrigger.rs
