[package]
name = "zoneminder-aidect"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "zm-aidect"
path = "src/main.rs"

[dependencies]
libc = "0.2.126"
image = "0.24.2"
simple_moving_average = "0.1.2"
opencv = { version = "0.64.0", features = ["clang-runtime"] }
mysql = "22.1.0"
