[package]
name = "zoneminder-aidect"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "zm-aidect"
path = "src/main.rs"

[dependencies]
libc = "0.2.126"
simple_moving_average = "0.1.2"
opencv = { version = "0.64.0", features = ["clang-runtime"] }
mysql = { version = "22.1.0", default-features = false }
flate2 = { version = "*", default-features = false, features = ["zlib"] }
rouille = "3.5.0"
prometheus = { version = "0.13.1", features = ["process"] }
prometheus-static-metric = "0.5.1"
lazy_static = "1.4.0"
