[package]
name = "zoneminder-aidect"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "zm-aidect"
path = "src/main.rs"

[dependencies]
libc = "0.2"
simple_moving_average = "0.1.2"
mysql = { version = "22.2.0", default-features = false }
flate2 = { version = "*", default-features = false, features = ["zlib"] }
tiny_http = "0.11.0"
prometheus = { version = "0.13.1", features = ["process"], default-features = false }
lazy_static = "1.4.0"
log = "0.4.17"
stderrlog = "0.5.3"
clap = { version = "3.2.12", features = ["derive"] }
anyhow = "1.0.58"
regex = "1.6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"

[dependencies.opencv]
version = "0.66.0"
default-features = false
features = [
    "dnn",
    "imgcodecs",
    "imgproc",
    "features2d",  # required for some reason I don't understand
]

[profile.tagged]
inherits = "release"
# -rwxr-xr-x 1 root root 10177232 Jun 13 18:33 zm-aidect

lto = true
# -rwxr-xr-x 1 root root  6398288 Jun 13 18:25 zm-aidect

opt-level = "z"
# -rwxr-xr-x 1 root root  6622352 Jun 13 18:27 zm-aidect

#strip = true
# -rwxr-xr-x 1 root root  3512792 Jun 13 18:28 zm-aidect

panic = "abort"
# -rwxr-xr-x 1 root root  3164632 Jun 13 18:29 zm-aidect
